# CS480Kastanek

./: .gitignore  README.md
PA1/include/: object.h
PA1/src/: main.cpp  object.cpp
PA10/: README.md
PA10/assets/: Bumper2.mtl  LaneRight.mtl  Plunger.mtl  nameLog.txt  scoreLog.txt  topScores.txt
PA10/include/: CMakeCache.txt  Makefile  Pinball  board.h  bumper.h  cmake_install.cmake  cylinder.h  graphics.h  gui.h  model.h  object.h  physics_object.h  plunger.h  world.h
PA10/shaders/: lighting.frag  shader.vert
PA10/src/: ball.cpp  board.cpp  bumper.cpp  camera.cpp  cylinder.cpp  engine.cpp  flipper.cpp  flipper_left.cpp  flipper_right.cpp  graphics.cpp  gui.cpp  main.cpp  model.cpp  object.cpp  physics_object.cpp  plunger.cpp  world.cpp
PA11/: CMakeLists.txt  README.md
PA11/assets/: Bb.mtl  Ground.mtl  Gun.mtl  TargetBlue.mtl  TargetGreen.mtl  TargetPurple.mtl  TargetRed.mtl  scoreLog.txt  topScores.txt
PA11/include/: bullet.h  camera.h  can.h  engine.h  graphics.h  gui.h  light.h  obstacle.h  shader.h  shadow.h  sound.h  target.h  trigger_object.h  window.h  world.h
PA11/shaders/: lighting.frag  lighting.vert  shadow_depth.frag  shadow_depth.vert
PA11/src/: bullet.cpp  camera.cpp  can.cpp  engine.cpp  graphics.cpp  gui.cpp  gun.cpp  light.cpp  obstacle.cpp  shader.cpp  shadow.cpp  sound.cpp  target.cpp  trigger_object.cpp  window.cpp  world.cpp
PA2/: README.md
PA2/include/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake  engine.h  graphics.h  gui.h  object.h
PA2/src/: engine.cpp  graphics.cpp  gui.cpp  main.cpp  object.cpp  window.cpp
PA3/: README.md
PA3/include/: engine.h  graphics.h  gui.h  object.h
PA3/src/: engine.cpp  graphics.cpp  gui.cpp  main.cpp  object.cpp
PA4/: README.md
PA4/include/: graphics.h  object.h
PA4/src/: engine.cpp  graphics.cpp  main.cpp  object.cpp
PA5/: CMakeLists.txt  README.md  makefile
PA5/include/: model.h  object.h
PA5/src/: camera.cpp  main.cpp  model.cpp  object.cpp
PA6/: CMakeLists.txt  README.md
PA6/assets/: sun.mtl
PA6/include/: Texture.h  camera.h  model.h  object.h  texture.h
PA6/src/: Texture.cpp  camera.cpp  main.cpp  model.cpp  object.cpp  texture.cpp
PA7/: README.md
PA7/assets/: SaturnRing.mtl  SaturnRings.mtl  Sun.mtl  UranusRing.mtl  planetData.txt
PA7/include/: camera.h  graphics.h  gui.h  moon.h  object.h  (+1 more)
PA8/: CMakeLists.txt  README.md
PA9/: CMakeLists.txt  README.md
PA9/include/: .graphics.h.kate-swp  engine.h  graphics.h  graphics_headers.h  model.h  shader.h  world.h
PA9/shaders/: lighting.frag  lighting.vert  perFrag.frag  perFrag.vert  perVertex.frag  shader.frag  shader.vert
PA9/src/: engine.cpp  flipper.cpp  graphics.cpp  model.cpp  object.cpp  shader.cpp  world.cpp
(+30 files in other folders)
